# cookiecutter-python-api-wrapper

./: cookiecutter.json
{{cookiecutter.repo_name}}/: .flake8  README.md  pyproject.toml
{{cookiecutter.repo_name}}/tests/: test_version.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  base.py  client.py  exceptions.py  utils.py
